# Cluster-manager

./: CMakeLists.txt
src/: CMakeLists.txt  SQLite DB.db  app.cpp  app.h  clusterization.h  file.h  file_management.h  global.h  k-means.h  math_functions.h  result_screen.h
